# CppPractice

./: .gitignore  CMakeLists.txt  File_RW_Test.cc  HelloWorld.cc  README.md  bbuild.ps1  main.cc  rrun.ps1  run.ps1
include/: Api.hh  Head.hh
src/: Api.cc  CMakeLists.txt
